# langchain-basic

./: .env.example  .gitignore  README.md  pyproject.toml
all-in-rag/code/C1/: 01_langchain_example.py  02_llamaIndex_example.py
all-in-rag/code/C2/: 02_character_splitter.py  03_recursive_character_splitter.py  04_semantic_chunker.py  05-spacytext_splitter.py
all-in-rag/code/C3/: 01_bge_visualized.py  02_langchain_faiss.py  03_llamaindex_vector.py  04_multi_milvus.py  05_sentence_window_retrieval.py  06_recursive_retrieval.py  07_recursive_retrieval_v2.py
all-in-rag/code/C4/: 01_hybrid_search.py  02_text_to_metadata_filter.py  03_text2sql_demo.py  04_text_to_metadata_filter_v2.py  05_llm_based_routing.py  06_embedding_based_routing.py  07_patch.py  07_rerank_and_refine.py  07_rerank_and_refine_kimi.py  test_retriever_api.py  work_rerank_and_refine.py
all-in-rag/code/C4/text2sql/: knowledge_base.py  sql_generator.py
all-in-rag/code/C5/: 01_pydantic.py  02_function_calling_example.py
all-in-rag/code/C6/: 01_llamaindex_evaluation_example.py
all-in-rag/code/C8/: config.py  main.py
all-in-rag/code/C8/rag_modules/: data_preparation.py  generation_integration.py  retrieval_optimization.py
all-in-rag/code/C8/vector_index/: index.faiss  index.pkl
all-in-rag/code/c9/agent(代码系ai生成)/: run_ai_agent.py
all-in-rag/data/C9/cypher/: neo4j_import.cypher
src/: 00-temp.py  01-hello-langchain.py  02-semantic-search-index.py  03-semantic-search.py  04-chromadb-tool.py  05-agent-basic.py  06-agent-stream.py  07-agent-mem-InMem.py  08-agent-mem-Postgres.py  09-agent-mem-Postgres-View.py  10-state-graph-checkpointer.py  11-agent-real-world.py  12-rag-indexing.py  13-rag-agent.py  14-human-in-loop.py  15-sql-agent.py  16-sql-agent-HITL.py  18-agent-tavily.py  19-deepagent.py  20-self-rag.py  21-mcp-call.py
src/17-multi-agent/: .env.example  calendar_agent.py  email_agent.py  supervisor_agent.py
