[project]
name = "langchain-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "deepagents>=0.3.0",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.0",
    "langchain-tavily>=0.2.13",
    "langchainhub>=0.1.21",
    "langgraph-checkpoint-postgres>=3.0.1",
    "langgraph-cli[inmem]>=0.4.9",
    "llama-index>=0.14.10",
    "llama-index-embeddings-ollama>=0.8.4",
    "llama-index-llms-langchain>=0.7.1",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-llms-openai>=0.6.12",
    "markdown>=3.10",
    "pypdf>=6.4.0",
    "sentence-transformers>=5.2.0",
    "tavily-python>=0.7.14",
    "unstructured>=0.18.21",
]
